--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,130 @@
     width: 80%
     object-fit: contain;
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .navbar{
+    background-color: #080401;
+    opacity: 1;
+ }
+
+ .navbar-links{
+    color: #f3dcb6;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 20px;
+ }
+
+ .navbar-links:hover{
+    color:blue;
+ }
+
+ .main-box{
+    border-style: solid;
+    border-color: #080401;
+    background-color: #f8f9fa;
+    border-width: 3px;
+ }
+
+ .normal-text{
+    font-family: 'Times New Roman', Times, serif;
+    font-style: normal;
+    color: black;
+    font-size: 18px;
+    text-align: justify;
+ }
+
+ .quote-box{
+    border-right:double #0ef21a 10px;
+    background-color: #f8f9fa;
+ }
+
+ .quote-text{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 22px;
+    font-style: italic;
+    text-align: justify;
+    color: black;
+ }
+
+ .quote-by{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    color: black;
+ }
+
+ .announcement-btn{
+   font-family: 'Times New Roman', Times, serif;
+   font-size: 16px;
+   border: solid;
+   border-radius: 10px;
+   border-width: 2px;
+   background-color: #f0f0f0;
+   color: black;
+   border-color: blue;
+ }
+
+ .announcement-btn:hover{
+   font-family: 'Times New Roman', Times, serif;
+   font-size: 16px;
+   border: solid;
+   border-radius: 10px;
+   border-width: 2px;
+   background-color: blue;
+   color: #f0f0f0;
+   border-color: #f0f0f0;
+   transition-duration: 0.3s;
+   transition-timing-function: linear;
+ }
+
+ .team-box{
+   background-image: linear-gradient(to bottom right, #028ea7, #7dd857);
+   border: black;
+   border-style: solid;
+   border-width: 1px;
+   
+}
+
+.team-page{
+   
+}
+
+.team-name{
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-weight: bold;
+   font-size: 20px;
+   color: black;
+}
+
+.team-des{
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+   font-style: italic;
+   font-size: 18px;
+   color: blue;
+}
+
+.team-mail{
+   text-decoration: none;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 15px;
+   color: black;
+}
+
+.team-mail:hover{
+   text-decoration: none;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 15px;
+   color: blue;
+   transition-duration: 0.3s;
+   transition-timing-function: linear;
+}
+
+.team-details{
+   font-family: 'Times New Roman', Times, serif;
+   font-size: 19px;
+   color: black;
+}
